# artifact-marathon-timer

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: gh-pages-deploy.yml
protos/: storage.proto
src/: main.rs  storage.rs
